overflow proble solved

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{
     font-family: 'Roboto', sans-serif;
     font-family: 'Inter', sans-serif;
     font-family: 'Manrope', sans-serif;
+    overflow-x: hidden;
 }
 .container {
     max-width: 1200px;
